# NLM

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: DATABASE_SCHEMA.md  IMPLEMENTATION_PLAN.md  NLM_EAGLE_SCENE_INDEX_BATCH_PIPELINE_APR17_2026.md  README.md
nlm/: __init__.py  client.py  train.py
nlm/api/: __init__.py  main.py
nlm/biology/: __init__.py  digital_twin.py  genetic_circuit.py  lifecycle.py  symbiosis.py
nlm/chemistry/: __init__.py  alchemy.py  encoder.py  knowledge.py  predictor.py  reaction_network.py  retrosynthesis.py
nlm/core/: __init__.py  fingerprints.py  frames.py  merkle.py  protocols.py
nlm/data/: __init__.py  augmentation.py  fingerprint_extraction.py  preconditioner.py  preprocessor.py  rooted_frame_builder.py
nlm/graph/: __init__.py  hyperdag.py  retrieval.py
nlm/guardian/: __init__.py  avani.py
nlm/mindex/: __init__.py  client.py
nlm/model/: __init__.py  attention.py  config.py  encoders.py  fusion.py  graph_encoders.py  heads.py  nlm_model.py  preconditioner.py  ssm_blocks.py
nlm/physics/: __init__.py  field_physics.py  molecular_dynamics.py  qise.py  quantum_simulator.py  tensor_network.py
nlm/quantization/: __init__.py  api.py  attention_wrappers.py  codebook.py  config.py  kv_cache.py  linear.py  qjl.py  rotation.py  ssm_compress.py  turbo_mse.py  turbo_prod.py  utils.py
nlm/search/: __init__.py  crep.py  domains.py  engine.py  myca.py  pipeline.py  sources.py
nlm/telemetry/: __init__.py  bio_tokens.py  (+3 more)
tests/: test_core.py  test_maritime.py  test_model.py  test_quantization.py  test_training.py
(+5 files in other folders)
